style.css
@import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');

body {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    height: 100vh;
}

button {
    all: unset;
    /*add stuff back*/
    display: block;
    cursor: pointer;
}

.container {
    box-shadow:
        0 0 0 4px lightgrey,
        0 0 0 6px #999;
    border-radius: 1rem;
    display: grid;
    grid-template-rows: 75px 75px 75px 75px 75px 75px 75px 75px 75px 75px;
    grid-template-columns: 75px 75px 75px 75px 75px 75px 75px;
}

button {
    outline: 1px solid #999;
    text-align: center;
    font-weight: 900;
    border-radius: 0.5rem;
    margin: 5px;
    box-shadow: 0 2px 0 #999;
    transition: all 0.1s;
}

button:active {
    transform: translateY(2px);
    box-shadow: 0 0px 0 #999;
}

.display {
    grid-row-start: 2;
    grid-row-end: 4;
    grid-column-start: 2;
    grid-column-end: 7;
    background-color: lightgrey;
    outline: 2px solid #999;
    border-radius: 1rem;
    text-align: end;
    display: flex;
    justify-content: end;
    align-items: center;
    gap: 5px;
    font-family: 'silkscreen', sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 50q;
}

.clear {
    grid-area: 5 / 2 / 6 / 6;
    background-image: linear-gradient(to right, white 50%, orange 50%);
    transition: 0.8s ease-out;
    background-size: 200%;
}

.clear:hover {
    background-position: right;
}

/*operator buttons*/
.divide {
    grid-area: 5 / 6 / 6 / 7;
}

.multiply {
    grid-area: 6 / 5 / 7 / 7;
}

.substract {
    grid-area: 7 / 5 / 8 / 7;
}

.add {
    grid-area: 8 / 5 / 9 / 7;
}

.decimal {
    grid-area: 9 / 5 / 10 / 6;
}

.result {
    grid-area: 9 / 6 / 10 / 7;
}

.divide, .multiply, .substract, .add, .result {
    background-color: #FFCC00;
}

/*number buttons*/
.number7 {
    grid-area: 6 / 2 / 7 / 3;
}

.number8 {
    grid-area: 6 / 3 / 7 / 4;
}

.number9 {
    grid-area: 6 / 4 / 7 / 5;
}

.number4 {
    grid-area: 7 / 2 / 8 / 3;
}

.number5 {
    grid-area: 7 / 3 / 8 / 4;
}

.number6 {
    grid-area: 7 / 4 / 8 / 5;
}

.number1 {
    grid-area: 8 / 2 / 9 / 3;
}

.number2 {
    grid-area: 8 / 3 / 9 / 4;
}

.number3 { 
    grid-area: 8 / 4 / 9 / 5;
}

.number0 {
    grid-area: 9 / 2 / 10 / 5;
}

